force-app/main/default/objects/Account_Manager_Flag__c/Account_Manager_Flag__c.object-meta.xml
<CustomObject>
    <description>Account can be mapped to one or more flags that could indicated if it is managed by an account manager or not.</description>
    <label>Account Manager Flag</label>
    <nameField>
        <label>Flag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Manager Flags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>