force-app/main/default/objects/Account_Manager_Flag__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account manager flags associated with an account</description>
    <inlineHelpText>Account manager flags associated with an account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Manager Flags</relationshipLabel>
    <relationshipName>Account_Manager_Flags</relationshipName>
    <type>Lookup</type>
</CustomField>