force-app/main/default/objects/Account_Manager_Flag__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description about the account manager flag</description>
    <inlineHelpText>Description about the account manager flag</inlineHelpText>
    <label>Description</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>