force-app/main/default/objects/Account_Manager_Flag__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Email address associated with the account manager flag</description>
    <inlineHelpText>Email address associated with the account manager flag</inlineHelpText>
    <label>Email Address</label>
    <length>64</length>
    <type>Text</type>
</CustomField>