force-app/main/default/objects/Account_Manager_Flag__c/fields/Is_Managed_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Managed_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the account is a managed account or not</description>
    <inlineHelpText>Indicates whether the account is a managed account or not</inlineHelpText>
    <label>Is Managed Account</label>
    <type>Checkbox</type>
</CustomField>