force-app/main/default/objects/Account_Manager_Flag__c/fields/IVR_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>IVR_Routing_Number__c</fullName>
    <description>IVR routing number associated with the account manager flag</description>
    <inlineHelpText>IVR routing number associated with the account manager flag</inlineHelpText>
    <label>IVR Routing Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>