force-app/main/default/objects/Account_Manager_Flag__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Phone number associated with the account manager flag</description>
    <inlineHelpText>Phone number associated with the account manager flag</inlineHelpText>
    <label>Phone Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>