force-app/main/default/objects/Account_Manager_Flag__c/fields/Time_Associated__c.field-meta.xml
<CustomField>
    <fullName>Time_Associated__c</fullName>
    <description>Time the account manager flag is associated with the account</description>
    <inlineHelpText>Time the account manager flag is associated with the account</inlineHelpText>
    <label>Time Associated</label>
    <type>DateTime</type>
</CustomField>