force-app/main/default/objects/Account_Manager_Flag__c/fields/Time_Created__c.field-meta.xml
<CustomField>
    <fullName>Time_Created__c</fullName>
    <description>Time when the account manager flag was created</description>
    <inlineHelpText>Time when the account manager flag was created</inlineHelpText>
    <label>Time Created</label>
    <type>DateTime</type>
</CustomField>